# HoverX

./: .gitignore  CMakeLists.txt  Makefile  README  settings.xml
cad_src/: MyWindow.H  MyWindow.cpp  UI.cxx  UI.fld  UI.h  drawing.cpp  flcallbacks.cpp  hcureader.cpp  hovercad.h  linefuncs.cpp  main.cpp  md2.cpp  polyfuncs.cpp  saveload.cpp  texmanage.cpp  tinerxml.cpp  tinerxml.h  vertfuncs.cpp
img/: font.tga
levels/: alley.xml  check.xml  classic8.xml  hoverlvl.xml  simple8.xml  sumo.xml  test.xml  tree.xml
models/: ball.xml
src/: CMakeLists.txt  Makefile  client.cpp  client.h  entity.cpp  entity.h  font.cpp  font.h  glex.cpp  glex.h  glness.h  icon.rc  level.cpp  level.h  line2d.cpp  line2d.h  main.cpp  main.h  obj.cpp  obj.h  physpoint.h  poly2d.cpp  poly2d.h  renderer.cpp  renderer.h  sdl.cpp  sdl.h  server.cpp  server.h  timestep.h  tinerxml.cpp  tinerxml.h  ui.cpp  ui.h  vector2d.h
